--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,14 @@
 body {
   text-decoration: none;
+  list-style-type: none;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.header-home {
+  padding-top: 5vh;
 }
