--- a/frontend/src/components/Product.css
+++ b/frontend/src/components/Product.css
@@ -3,31 +3,37 @@
   flex-direction: column;
   /* border: 2px solid black; */
   width: 120%;
-  height: 105%;
-  margin: 1% 5% 5% 1%;
+
+  height: 65vh;
+  /* margin: 1% 5% 1% 1%; */
   border-radius: 10px;
   background-color: white;
   box-shadow: 2px 2px 10px;
 }
 .listPrice {
   display: flex;
-  width: 45vh;
-  height: 40.5vh;
+  /* width: 45vh;
+  height: 40.5vh; */
+  width: 110%;
+
   /* border: 2px solid rgb(200, 6, 6); */
   border-radius: 10px;
 }
 
 .listPrice img {
-  width: 45vh;
-  height: 40vh;
+  padding-left: 23%;
+  width: 55%;
+  /* height: 50%; */
   border-radius: 10px;
 }
 
 .listProducts {
   display: flex;
-  margin-left: 0%;
-  margin-bottom: 5%;
-  width: 24%;
+  justify-content: center;
+  padding-left: 1%;
+  padding-right: 5%;
+  padding-top: 5%;
+  width: 15%;
   /* background-color: blueviolet; */
 }
 .listCat {
@@ -40,30 +46,34 @@
   display: flex;
   justify-content: space-around;
   margin-top: auto;
-  margin-bottom: 5px;
+  margin-bottom: 5%;
+  /* margin-bottom: 5px; */
 }
 
 .listUn img {
   display: flex;
   align-items: center;
-  width: 7vh;
-  margin-left: 10px;
+  width: 9%;
+  padding-bottom: 2%;
+  position: relative;
+  z-index: 5;
+  /* margin-left: 10px; */
 }
 
 .price {
   display: flex;
   justify-content: space-around;
-  font-size: 180%;
+  font-size: 110%;
   font-weight: bolder;
-  color: #0075a1;
+  color: #fe5e00;
 }
 
 .listCat h2 {
   display: flex;
-  font-size: 220%;
+  font-size: 120%;
   margin: 0.5vh;
   justify-content: center;
-  color: #0075a1;
+  color: #fe5e00;
 }
 .listName {
   display: flex;
@@ -71,23 +81,25 @@
   align-items: center;
 }
 
-.name {
+/* .name {
   display: flex;
   justify-content: center;
   margin-top: 0.5vh;
-  font-size: 180%;
-}
-.name h3 {
+  font-size: 110%;
+} */
+/* .name h3 {
   text-align: center;
-}
+} */
 
 .decrip {
   display: flex;
   justify-content: center; /*********************************************************/
   width: 70%;
-  margin: 2vh 2vh 2vh 6vh;
+  /* padding: 2vh 2vh 2vh 6vh; */
+  padding-top: 10%;
+  padding-left: 14%;
   text-align: center;
-  font-size: 150%;
+  font-size: 70%;
 }
 /*******************************************************/
 @media screen and (max-width: 390px) {
