--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -20,3 +20,9 @@
   text-decoration: none;
   color: #0d1110;
 }
+.deconnexion button {
+  color: #ffffff;
+  background-color: #fe5e00;
+  margin-left: 2%;
+  margin-top: 2%;
+}
