--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -23,6 +23,7 @@
 .deconnexion button {
   color: #ffffff;
   background-color: #fe5e00;
+  border-radius: 15vh;
   border: none;
   margin-left: 2%;
   margin-top: 2%;
