--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -4,9 +4,9 @@
 .ban {
   display: flex;
   justify-content: center;
-  padding-top: 10%;
+  /* padding-top: 0%; */
 }
 .ban img {
-  padding-top: 5vh;
+  /* padding-top: 1vh; */
   width: 90%;
 }
