--- a/frontend/src/components/Contact.css
+++ b/frontend/src/components/Contact.css
@@ -25,8 +25,8 @@
   padding-bottom: 1%;
 }
 .contact-form-message {
-  width: 20%;
-  height: 8vh;
+  width: 35%;
+  height: 20vh;
 }
 .bottom {
   display: flex;
@@ -34,6 +34,13 @@
 }
 .contact-form-btn {
   background-color: #fe5e00;
+  border-radius: 15vh;
   border: none;
   color: #ffff;
+}
+
+.contact-form-text,
+.contact-form-message {
+  border-color: #fe5e00;
+  border-width: 0.3vh;
 }
