--- a/frontend/src/components/ProductsList.css
+++ b/frontend/src/components/ProductsList.css
@@ -9,7 +9,17 @@
   width: 90%;
   height: 100%;
 }
-
+.leon a {
+  padding-top: 2%;
+  display: flex;
+  justify-content: space-around;
+  padding-left: 6.5%;
+  /* flex-wrap: wrap; */
+  /* border: 2px solid rgb(88, 25, 198); */
+  /* position: relative; */
+  width: 100%;
+  height: 100%;
+}
 /* @media screen and (max-width: 373px) {
   
   } */
