--- a/frontend/src/pages/Connexion.css
+++ b/frontend/src/pages/Connexion.css
@@ -44,3 +44,26 @@
   border: none;
   font-size: 2.5vh;
 }
+
+@media screen and (max-width: 490px) {
+  .bloc {
+    flex-wrap: wrap;
+  }
+  .email,
+  .password,
+  .a,
+  .b,
+  .c,
+  .d {
+    width: 100%;
+  }
+
+  .buttonc {
+    font-size: 1.5vh;
+  }
+
+  .buttonc:hover {
+    font-size: 1.5vh;
+    background-color: #0d1110;
+  }
+}
