--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -10,3 +10,11 @@
   /* padding-top: 1vh; */
   width: 90%;
 }
+
+@media screen and (max-width: 490px) {
+  .ban {
+    display: none;
+    justify-content: center;
+    /* padding-top: 0%; */
+  }
+}
