--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -31,11 +31,13 @@
   margin-left: 2%;
   margin-top: 2%;
 }
-
+.deconnexion button:hover {
+  background-color: #0d1110;
+}
 @media screen and (max-width: 490px) {
   .logo img {
-    width: 45%;
-    padding-left: 28%;
+    width: 60%;
+    padding-left: 20%;
   }
 
   .navbar {
