--- a/frontend/src/components/Product.css
+++ b/frontend/src/components/Product.css
@@ -14,7 +14,6 @@
   /* width: 45vh;
   height: 40.5vh; */
   width: 110%;
-
   /* border: 2px solid rgb(200, 6, 6); */
   border-radius: 10px;
 }
@@ -35,6 +34,7 @@
   width: 15%;
   /* background-color: blueviolet; */
 }
+
 .listCat {
   display: flex;
   justify-content: center;
@@ -97,6 +97,7 @@
   /* padding: 2vh 2vh 2vh 6vh; */
   padding-top: 10%;
   padding-left: 14%;
+  padding-bottom: 2%;
   text-align: center;
   font-size: 70%;
 }
@@ -118,43 +119,41 @@
     display: flex;
     /* margin-right: 10%;
     margin-left: 10%; */
-    margin-bottom: 5%;
+    /* margin-bottom: 5%; */
+    padding-bottom: 2%;
     width: 30%;
-  }
-  .listCat {
-    display: none;
-    justify-content: center;
   }
 
   .listUn {
     display: flex;
     justify-content: space-around;
-    margin-top: auto;
-    margin-bottom: 5px;
+    /* margin-top: auto; */
+    /* margin-bottom: 5px; */
   }
 
   .listUn img {
     display: flex;
     align-items: center;
     width: 3vh;
-    margin-right: 1vh;
-    margin-bottom: 2vh;
+    padding-top: 10%;
+    /* margin-right: 1vh; */
+    /* margin-bottom: 2vh; */
   }
 
   .price {
     display: flex;
     justify-content: space-around;
-    font-size: 110%;
+    font-size: 80%;
+    padding-top: 10%;
     font-weight: bolder;
-    color: #0075a1;
+    color: #fe5e00;
   }
 
   .listCat h2 {
-    display: none;
-    font-size: 10%;
-    margin: 0.5vh;
+    display: flex;
+    font-size: 80%;
     justify-content: center;
-    color: #0075a1;
+    color: #fe5e00;
   }
   .listName {
     display: flex;
@@ -162,8 +161,8 @@
     align-items: center;
   }
 
-  .name {
-    display: flex;
+  /* .name {
+    display: none;
     justify-content: center;
     margin-top: 0vh;
     margin-bottom: 2vh;
@@ -171,7 +170,7 @@
   }
   .name h3 {
     text-align: center;
-  }
+  } */
   .decrip {
     display: none;
   }
