--- a/frontend/src/components/ProductsList.css
+++ b/frontend/src/components/ProductsList.css
@@ -9,16 +9,18 @@
   width: 90%;
   height: 100%;
 }
-.leon a {
-  padding-top: 2%;
+.leon1 a {
+  /* padding-bottom: 2%; */
   display: flex;
-  justify-content: space-around;
-  padding-left: 6.5%;
+  justify-content: center;
+  list-style-type: none;
+  text-decoration: none;
+  /* padding-left: 6.5%; */
   /* flex-wrap: wrap; */
-  /* border: 2px solid rgb(88, 25, 198); */
   /* position: relative; */
-  width: 100%;
-  height: 100%;
+  /* width: 50%; */
+  /* height: 100%;
+  background-color: blue; */
 }
 /* @media screen and (max-width: 490px) {
   
