without post product, contact & favicon

--- a/frontend/src/components/Contact.css
+++ b/frontend/src/components/Contact.css
@@ -40,7 +40,9 @@
   border: none;
   color: #ffff;
 }
-
+.contact-form-btn:hover {
+  background-color: #0d1110;
+}
 .contact-form-text,
 .contact-form-message {
   border-color: #fe5e00;
