--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -15,7 +15,7 @@
 }
 
 .navbar a {
-  /* font-size: 2vh; */
+  font-size: 110%;
   list-style-type: none;
   text-decoration: none;
   color: #0d1110;
